--- a/localizacao.html
+++ b/localizacao.html
@@ -38,8 +38,8 @@
 <h2>Zona Sul</h2>
 </div>
 
-<div class="LocalizacaoMapa"><iframe frameborder="0" height="350" marginheight="0" marginwidth="0" scrolling="no" src="http://maps.google.com.br/maps?f=d&amp;source=s_d&amp;saddr=-30.106648,-51.244315&amp;daddr=&amp;hl=pt-BR&amp;geocode=&amp;mra=mi&amp;mrsp=0&amp;sz=16&amp;sll=-30.107007,-51.245255&amp;sspn=0.008038,0.01929&amp;ie=UTF8&amp;ll=-30.106375,-51.244183&amp;spn=0.012994,0.025749&amp;z=15&amp;output=embed" width="600"></iframe><br />
-<small><a href="http://maps.google.com.br/maps?f=d&amp;source=embed&amp;saddr=-30.106648,-51.244315&amp;daddr=&amp;hl=pt-BR&amp;geocode=&amp;mra=mi&amp;mrsp=0&amp;sz=16&amp;sll=-30.107007,-51.245255&amp;sspn=0.008038,0.01929&amp;ie=UTF8&amp;ll=-30.106375,-51.244183&amp;spn=0.012994,0.025749&amp;z=15" style="color:#0000FF;text-align:left">Exibir mapa ampliado</a></small></div>
+<div class="LocalizacaoMapa"><iframe frameborder="0" height="350" marginheight="0" marginwidth="0" scrolling="no" src="https://maps.google.com.br/maps?f=d&amp;source=s_d&amp;saddr=-30.106648,-51.244315&amp;daddr=&amp;hl=pt-BR&amp;geocode=&amp;mra=mi&amp;mrsp=0&amp;sz=16&amp;sll=-30.107007,-51.245255&amp;sspn=0.008038,0.01929&amp;ie=UTF8&amp;ll=-30.106375,-51.244183&amp;spn=0.012994,0.025749&amp;z=15&amp;output=embed" width="600"></iframe><br />
+<small><a href="https://maps.google.com.br/maps?f=d&amp;source=embed&amp;saddr=-30.106648,-51.244315&amp;daddr=&amp;hl=pt-BR&amp;geocode=&amp;mra=mi&amp;mrsp=0&amp;sz=16&amp;sll=-30.107007,-51.245255&amp;sspn=0.008038,0.01929&amp;ie=UTF8&amp;ll=-30.106375,-51.244183&amp;spn=0.012994,0.025749&amp;z=15" style="color:#0000FF;text-align:left">Exibir mapa ampliado</a></small></div>
 </div>
 </div>
 </div>
