--- a/localizacao.html
+++ b/localizacao.html
@@ -26,7 +26,7 @@
 </ul>
 </div>
 
-<div id="HeaderMenuPedido"><a href="https://www.ifood.com.br/latarantella?Origem=SiteParceiro&amp;produto=intermediario"><img alt="Pedido On Line" id="HeaderPedidoIMG" src="img/ifood.png" title="Pedido On Line" /> </a></div>
+<div id="HeaderMenuPedido"><a href="https://www.ifood.com.br/delivery/porto-alegre-rs/la-tarantella-tristeza/970cbff6-da26-4565-9a74-1a1b5ef02411"><img alt="Pedido On Line" id="HeaderPedidoIMG" src="img/ifood.png" title="Pedido On Line" /> </a></div>
 </div>
 </div>
 
