--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><meta charset="utf-8">
+<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-10265721-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-10265721-1');
+</script>
+
+	<meta charset="utf-8">
 	<link href="css/stlLatarantella.css" rel="stylesheet" /><!--[if gte IE 5.5]>
 <link rel="stylesheet"  href="css/stlLatarantellaIE.css"/ /><![endif]-->
 	<title>Pizzaria La Tarantella Porto Alegre RS</title>
@@ -56,12 +67,5 @@ O que mais chama a aten&ccedil;&atilde;o ao se conhecer essa casa &eacute; que l
 </div>
 </div>
 </div>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try{
-var pageTracker = _gat._getTracker("UA-10265721-1");
-pageTracker._trackPageview();
-} catch(err) {}</script></body>
+</body>
 </html>
