--- a/localizacao.html
+++ b/localizacao.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-10265721-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-10265721-1');
+</script>
+
+	
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="css/stlLatarantella.css" rel="stylesheet" /><!--[if gte IE 5.5]>
 		<link rel="stylesheet"  href="css/stlLatarantellaIE.css"/>
 <![endif]-->
@@ -60,11 +72,4 @@
 </div>
 </div>
 </body>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try{
-var pageTracker = _gat._getTracker("UA-10265721-1");
-pageTracker._trackPageview();
-} catch(err) {}</script></html>
+</html>
