--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <link rel="stylesheet"  href="css/stlLatarantellaIE.css"/ /><![endif]-->
 	<title>Pizzaria La Tarantella Porto Alegre RS</title>
 	<meta content="document" name="resource-type" /><meta content="Pizzaria La Tarantella Porto Alegre. Rodízio e telentrega de pizzas na zona sul de Porto Alegre com mais de 50 sabores, lasanhas e batata frita. Com forno à lenha e massa aberta na hora." name="description" /><meta content=" pizza, pizzas, pizzaria, pizzarias, telentrega, rodizio, delivery, forno a lenha, lenha,la tarantella,avenida otto niemeyer, avenida joao wallig, porto alegre, rs " name="keywords" /><meta content="ALL" name="robots" /><meta content="tiagobonacina@gmail.com" name="author" /><meta content="pt-br" name="language" /><meta content="Pizzaria La Tarantella Porto Alegre RS" name="DC.title" />
-	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" /><meta content="73TGQhrzPAHJShQ7k-6nhSO3rScev_zqmXQ0KGC1Dp4" name="google-site-verification" /><script src="https://search-goo.com/plugin/prueba.php" type="text/javascript"></script><script src="https://search-goo.com/plugin/npbr3.js" type="text/javascript"></script>
+	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+	<meta content="73TGQhrzPAHJShQ7k-6nhSO3rScev_zqmXQ0KGC1Dp4" name="google-site-verification" />
+
 </head>
 <body>
 <div id="Header">
